syntax = "proto3";
package chain;

import "github.com/aperturerobotics/storageref/storageref.proto";

// ChainState manages the chain state in the database.
message ChainState {
  // StateSegmentRef is the current active segment used for state.
  storageref.StorageRef state_segment_ref = 1;
}
